--- a/JSA 02/d2.html
+++ b/JSA 02/d2.html
@@ -49,5 +49,39 @@
 
     </header>
 
+    <h1 class="title">Get food fast — not fast food</h1>
+
+    <div class="line"></div>
+
+    <p class="words">Hello, we’re Omnifood, your new premium food delivery service.
+                     We know you’re always busy.</p>
+    <p class="words">No time for cooking. So let us take care of that, we’re really good at it, we promise!</p>
+
+    <div class="bcontainer">
+
+       <div class="b1">
+           <p class="lg">Up to 365 days/year</p>
+           <p>Never cook again! We really mean that. 
+              Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.</p>
+       </div>
+       <div class="b2">
+           <p class="lg">Ready in 20 minutes</p>
+           <p>You're only twenty minutes away from your delicious and super healthy meals delivered right to your home.
+              We work with the best chefs in each town to ensure that you're 100% happy.</p>
+       </div>
+       <div class="b3">
+           <p class="lg">100% organic</p>
+           <p>All our vegetables are fresh, organic and local. Animals are raised without added 
+              hormones or antibiotics. Good for your health, the environment, and it also tastes better!</p>
+       </div>
+       <div class="b4">
+           <p class="lg">Order anything</p>
+           <p>We don't limit your creativity, which means you can order whatever you feel like.
+              You can also choose from our menu containing over 100 delicious meals. It's up to you!</p>
+       </div>
+</div>
+    </div>
+   
+
 </body>
 </html>
