--- a/JSA 02/index.html
+++ b/JSA 02/index.html
@@ -131,7 +131,7 @@
 
             <div class="cities-item">
                 <img src="./images/lisbon-3.jpg" alt="">
-                <p>Biston</p>
+                <p>Lisbon</p>
                 <div class="content">
                     <i class="fas fa-user"></i>
                     <span>1600+ happy eaters</span>
